Fix spacing in technology section

--- a/Markup/frontpage/css/style.css
+++ b/Markup/frontpage/css/style.css
@@ -1687,7 +1687,7 @@ a.generalButton,
   padding-left: 0; }
   .technologyList li {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     padding-left: 29px; }
     .technologyList li:before {
       content: '';
